force-app/main/default/objects/zkups__UPSHazMatDetails__c/zkups__UPSHazMatDetails__c.object-meta.xml
<CustomObject>
    <label>UPS Haz Mat Details</label>
    <nameField>
        <label>UPS Haz Mat Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>UPS Haz Mat Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>