force-app/main/default/objects/zkups__UPSHazMatDetails__c/fields/zkups__ADRItemNumber__c.field-meta.xml
<CustomField>
    <fullName>zkups__ADRItemNumber__c</fullName>
    <description>The type of regulated good for an ADR package where ADR is for Europe to Europe ground movement</description>
    <inlineHelpText>The type of regulated good for an ADR package where ADR is for Europe to Europe ground movement</inlineHelpText>
    <label>ADR Item Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>