force-app/main/default/objects/zkups__UPSHazMatDetails__c/fields/zkups__ClassDivisionNumber__c.field-meta.xml
<CustomField>
    <fullName>zkups__ClassDivisionNumber__c</fullName>
    <description>This is the hazard class associated to the specified commodity</description>
    <inlineHelpText>This is the hazard class associated to the specified commodity</inlineHelpText>
    <label>Class Division Number</label>
    <length>7</length>
    <type>Text</type>
</CustomField>