force-app/main/default/objects/zkups__UPSHazMatDetails__c/fields/zkups__CommodityRegulatedLevelCode__c.field-meta.xml
<CustomField>
    <fullName>zkups__CommodityRegulatedLevelCode__c</fullName>
    <description>Indicates the type of commodity</description>
    <inlineHelpText>Indicates the type of commodity</inlineHelpText>
    <label>Commodity Regulated Level Code</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>LR</fullName>
                <label>Lightly Regulated</label>
            </value>
            <value>
                <fullName>FR</fullName>
                <label>Fully Regulated</label>
            </value>
            <value>
                <fullName>LQ</fullName>
                <label>Limited Quantity</label>
            </value>
            <value>
                <fullName>EQ</fullName>
                <label>Excepted Quantity</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>