force-app/main/default/objects/zkups__UPSHazMatDetails__c/fields/zkups__PackagingInstructionCode__c.field-meta.xml
<CustomField>
    <fullName>zkups__PackagingInstructionCode__c</fullName>
    <description>The packing instructions related to the chemical record</description>
    <inlineHelpText>The packing instructions related to the chemical record</inlineHelpText>
    <label>Packaging Instruction Code</label>
    <length>4</length>
    <type>Text</type>
</CustomField>