force-app/main/default/objects/zkups__UPSHazMatDetails__c/fields/zkups__TunnelRestrictionCode__c.field-meta.xml
<CustomField>
    <fullName>zkups__TunnelRestrictionCode__c</fullName>
    <description>Defines what is restricted to pass through a tunnel.</description>
    <inlineHelpText>Defines what is restricted to pass through a tunnel.</inlineHelpText>
    <label>Tunnel Restriction Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>